--- a/templates/partials/_listProfile.html.twig
+++ b/templates/partials/_listProfile.html.twig
@@ -7,6 +7,7 @@
                     {% set flag_requester = false %}
                     {% set flag_requested = false %}
                     {% set flag_state = false %}
+                    {% set badge_display = 'none' %}
                     {# ---- #}  
                     <div class="row mb-3 mt-3">
                         <div class="col-7 col-md-8">
@@ -22,26 +23,31 @@
                                 class="avatar avatar-media mr-3 my-auto" alt="{{ 'alt.avatar'|trans|raw }} {{ result.pseudo }}">
                                 <div class="media-body">
                                     <p class="col-text-pseudo mt-0">{{result.pseudo }}
+                                        {# Badge Management #}
                                         {% if result.id == user_id %}
                                             <span class="badge badge-happyDarkBlue">{{ 'generic.you'|trans|raw }}</span>
                                         {% else %}
                                             {# verify if user is a requester to be new friend #}
-                                            {% for requester in new_requester %}
-                                                {% if requester.u_id == result.id %}
-                                                    <span class="badge badge-happyDarkBlue" id="B_{{ result.id }}" style="display:inline">Vous a sollicité</span>
-                                                    {% set flag_requester = true %}
-                                                {% endif %}
-                                            {% endfor %}
-                                            {# verify if user has been resquested to be new friend #}
-                                            {% if not flag_requester %}
-                                                {% for requested in new_requested %}
-                                                    {% if requested.u_id == result.id %}
-                                                        <span class="badge badge-happyDarkBlue" id="B_{{ result.id }}" style="display:inline">Connexion demandée</span>
-                                                        {% set flag_requested = true %}
+                                            {% if new_requester is defined %}
+                                                {% for requester in new_requester %}
+                                                    {% if requester.u_id == result.id %}
+                                                        <span class="badge badge-happyDarkBlue" id="S_{{ result.id }}" style="display:inline">Vous a sollicité</span>
+                                                        {% set flag_requester = true %}
                                                     {% endif %}
                                                 {% endfor %}
+                                                {# verify if user has been resquested to be new friend #}
+                                                {% if not flag_requester and new_requested is defined %}
+                                                    {% for requested in new_requested %}
+                                                        {% if requested.u_id == result.id %}
+                                                            {% set badge_display = 'inline' %}
+                                                            {% set flag_requested = true %}
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                    <span class="badge badge-happyDarkBlue" id="BC_{{ result.id }}" style="display:{{ badge_display }} ">Connexion demandée</span>
+                                                {% endif %}
                                             {% endif %}
                                         {% endif %}
+                                        {# End Badge management #}
                                     </p>
                                     {% if result.firstName is not empty %}
                                         <p class="col-text-profile">{{ result.firstName }}  {{ result.lastName }}</p>
@@ -53,9 +59,11 @@
                                     {% endif %}
                                     <p class="col-text-profile">Grenoble, France</p>
                                     <a href="{{ path('show_profile', {'slug':result.slug}) }}" class="stretched-link"></a>
+
                                 </div>
                             </div>
                         </div>
+                        {# Management of button #}
                         {% if list == 'F' %} {# if list of friends #}
                             <div class="col-5 col-md-4 text-right my-auto">
                                 <a class="btn btn-outline-happyDarkBlue btn-sm btn-connect" href="#">{{ 'generic.message'|trans|raw }}</a>
@@ -72,39 +80,18 @@
                             {% if result.id != user_id %}
                                 {% if flag_requested %}
                                     <div class="col-5 col-md-4 text-right my-auto">
-                                        <a class="btn btn-outline-happyDarkBlue btn-sm btn-connect" href="#"
-                                            id="W_{{ result.id }}" data-token="{{ csrf_token('connect'~result.id) }}">
+                                        <a class="btn btn-outline-happyDarkBlue btn-sm btn-cancel" href="#"
+                                            id="CA_{{ result.id }}" data-token="{{ csrf_token('cancel'~result.id) }}">
                                             {{ 'generic.cancel'|trans|raw }}
                                         </a>
                                     </div>
                                 {% elseif flag_requester %}
-                                    <div class="col-5 col-md-4 text-right my-auto">
-                                        <a class="btn btn-outline-happyDarkBlue btn-sm btn-connect" href="#">{{ 'generic.accept'|trans|raw }}</a>
-                                        <div class="btn-group">
-                                            <button class="btn btn-happyGrey btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <i class="fas fa-user-minus"></i>
-                                            </button>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Refuser la relation</button>
-                                                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Blackliter {{ result.pseudo }}</button>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    {{ _self.button_accept(result.id) }}
                                 {% else %}
                                     {% for friend_or_blacklist  in friends_blackList %}
                                         {% if friend_or_blacklist.u_id == result.id %}
                                             {% if friend_or_blacklist.c_state == 'C' %} {# if friend #}
-                                                <div class="col-5 col-md-4 text-right my-auto">
-                                                    <a class="btn btn-outline-happyDarkBlue btn-sm btn-connect" href="#">{{ 'generic.message'|trans|raw }}</a>
-                                                    <div class="btn-group">
-                                                        <button class="btn btn-happyDarkBlue btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                            <i class="fas fa-user-minus"></i>
-                                                        </button>
-                                                        <div class="dropdown-menu dropdown-menu-right">
-                                                            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Supprimer la relation</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                {{ _self.button_accept(result.id) }}
                                                 {% set flag_state = true %}
                                             {% endif %}
                                         {% endif %}
@@ -120,6 +107,7 @@
                                 {% endif %}
                             {% endif %}
                         {% endif %}
+                        {# End of management of buttons #}
                     </div>
                     {% if not loop.last %}<hr>{% endif %}
                 {% endfor %}
@@ -133,3 +121,19 @@
         </div>
     </div>
 {% endif %}
+
+{% macro button_accept(id_user) %}
+    <div class="col-5 col-md-4 text-right my-auto">
+        <a class="btn btn-outline-happyDarkBlue btn-sm btn-accept" id="A_{{ id_user }} href="#">{{ 'generic.accept'|trans|raw }}</a>
+        <div class="btn-group">
+            <button class="btn btn-happyGrey btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user-minus"></i>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right">
+                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Refuser la relation</button>
+                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Blackliter {{ result.pseudo }}</button>
+            </div>
+        </div>
+    </div>
+
+{% endmacro %}
