--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -33,21 +33,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('js/listProfile') }}
-    <script>
-        // advanced search form visible or not
-        document.getElementById("btnAdvancedSearch").addEventListener("click", function(){
-            document.getElementById("advancedSearch").style.display
-            if ( document.getElementById("advancedSearch").style.display === "none") {
-                $("#advancedSearch").show("slow")
-                document.getElementById("iconAdvancedSearch").className = "fas fa-caret-up"
-                document.getElementById("advancedSearch").style.display = "inline"
-            }
-            else {
-                $("#advancedSearch").hide("slow")
-                document.getElementById("iconAdvancedSearch").className = "fas fa-caret-down"
-                document.getElementById("advancedSearch").style.display = "none"
-            }
-        })
-    </script>
+    {% include 'partials/js/listProfileJs.html.twig' %}
 {% endblock %}
