--- a/templates/partials/_listProfile.html.twig
+++ b/templates/partials/_listProfile.html.twig
@@ -6,15 +6,7 @@
                     {# Set variables #}
                     {% set flag_requester = false %}
                     {% set flag_requested = false %}
-                    {% set flag_state = false %}
-                    {% set badge_display = 'none' %}
-                    {% set badge_message = ''%}
-                    {% set button_display = 'none' %}
-                    {% set btn_name = '' %}
-                    {% set btn_id_name = '' %}
-                    {% set btn_message = '' %}
-                    {% set btn_href = '#' %}
-                    {% set btn_grp_display = 'none' %}
+                    {% set flag_connected = false %}
                     {# ---- #}  
                     <div class="row mb-3 mt-3">
                         <div class="col-7 col-md-8">
@@ -32,31 +24,30 @@
                                     <p class="col-text-pseudo mt-0">{{result.pseudo }}
                                         {# Badge Management #}
                                         {% if result.id == user_id %}
-                                            {% set badge_display = 'inline' %}
-                                            {% set badge_message = 'generic.you'|trans|raw %}
+                                            {{ _self.badge(result.id, 'inline', 'generic.you'|trans|raw) }}
                                         {% else %}
                                             {# verify if user is a requester to be new friend #}
                                             {% if new_requester is defined %}
                                                 {% for requester in new_requester %}
                                                     {% if requester.u_id == result.id %}
-                                                        {% set badge_display = 'inline' %}
-                                                        {% set badge_message = 'vous a sollicité' %}
+                                                        {{ _self.badge(result.id, 'inline', 'requested.you'|trans|raw) }}
                                                         {% set flag_requester = true %}
                                                     {% endif %}
                                                 {% endfor %}
-                                                {# verify if user has been resquested to be new friend #}
-                                                {% if not flag_requester and new_requested is defined %}
-                                                    {% for requested in new_requested %}
-                                                        {% if requested.u_id == result.id %}
-                                                            {% set badge_display = 'inline' %}
-                                                            {% set badge_message = 'connection.requested'|trans|raw %}
-                                                            {% set flag_requested = true %}
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                {% endif %}
+                                            {% endif %}
+                                            {# verify if user has been resquested to be new friend #}
+                                            {% if not flag_requester and new_requested is defined %}
+                                                {% for requested in new_requested %}
+                                                    {% if requested.u_id == result.id %}
+                                                        {{ _self.badge(result.id, 'inline', 'connection.requested'|trans|raw ) }}
+                                                        {% set flag_requested = true %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                            {% endif %}
+                                            {% if not flag_requester and not flag_requested %}
+                                                {{ _self.badge(result.id, 'none', '') }}
                                             {% endif %}
                                         {% endif %}
-                                        <span class="badge badge-happyDarkBlue" id="B_{{ result.id }}" style="display:{{ badge_display }} ">{{ badge_message }}</span>
                                         {# End Badge management #}
                                     </p>
                                     {% if result.firstName is not empty %}
@@ -69,62 +60,38 @@
                                     {% endif %}
                                     <p class="col-text-profile">Grenoble, France</p>
                                     <a href="{{ path('show_profile', {'slug':result.slug}) }}" class="stretched-link"></a>
-
                                 </div>
                             </div>
                         </div>
                         {# Management of button #}
-                            {% if list == 'F' %} {# if list of friends #}
-                                {% set button_display = 'inline' %}
-                                {% set btn_name = 'btn-message' %}
-                                {% set btn_id_name = 'ME' %}
-                                {% set btn_message = 'generic.message'|trans|raw %}
-                                {# <div class="col-5 col-md-4 text-right my-auto">
-                                    <a class="btn btn-outline-happyDarkBlue btn-sm btn-connect" href="#">{{ 'generic.message'|trans|raw }}</a> 
-                                    
-                                    <div class="btn-group">
-                                        <button class="btn btn-happyDarkBlue btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-user-minus"></i>
-                                        </button>
-                                        <div class="dropdown-menu dropdown-menu-right">
-                                            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Supprimer la relation</button>
-                                        </div>
-                                    </div>
-                                </div> #}
-                        {% else %}
-                            {% if result.id != user_id %}
-                                {% if flag_requested %}
-                                    {% set button_display = 'inline' %}
-                                    {% set btn_name = 'btn-cancel' %}
-                                    {% set btn_id_name = 'CA' %}
-                                    {% set btn_message = 'generic.cancel'|trans|raw %}
-                                {% elseif flag_requester %}
-                                    {{ _self.button_accept(result.id) }}
-                                {% else %}
-                                    {% for friend_or_blacklist  in friends_blackList %}
-                                        {% if friend_or_blacklist.u_id == result.id %}
-                                            {% if friend_or_blacklist.c_state == 'C' %} {# if friend #}
-                                                {{ _self.button_accept(result.id) }}
-                                                {% set flag_state = true %}
-                                            {% endif %}
-                                        {% endif %}
-                                    {% endfor %}
-                                        {% if not flag_state %}
-                                        {% set button_display = 'inline' %}
-                                        {% set btn_name = 'btn-connect' %}
-                                        {% set btn_id_name = 'CO' %}
-                                        {% set btn_href = path('request_connect', {'id': result.id}) %}
-                                        {% set btn_message = 'generic.connect'|trans|raw %}
+                        {% if list == 'F' %} {# if show friends #}
+                            {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
+                            {# <div class="btn-group">
+                                <button class="btn btn-happyDarkBlue btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-user-minus"></i>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Supprimer la relation</button>
+                                </div>
+                            </div> #}
+                        {% elseif result.id != user_id %}
+                            {% if flag_requested %} {# if user has requested for a connection #}
+                                {{ _self.btn_action(result.id, 'inline', 'CA', '#', 'generic.cancel'|trans|raw) }}
+                            {% elseif flag_requester %} {# if user has been requested for a connection #}
+                                {{ _self.btn_action(result.id, 'inline', 'AC', '#', 'generic.accept'|trans|raw) }}
+                            {% else %}
+                                {% for friend_or_blacklist  in friends_blackList %}
+                                    {% if friend_or_blacklist.u_id == result.id and friend_or_blacklist.c_state == 'C' %} {# if already friend #}
+                                        {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
+                                        {% set flag_connected = true %}
                                     {% endif %}
-                                {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                            {# if no request and no relationship #}
+                            {% if not flag_requested and not flag_requester and not flag_connected %}
+                                {{ _self.btn_action(result.id, 'inline', 'CO', path('request_connect', {'id': result.id}), 'generic.connect'|trans|raw) }}
                             {% endif %}
                         {% endif %}
-                        <div class="col-5 col-md-4 text-right my-auto" style="display: {{ button_display }};">
-                            <a class="btn btn-outline-happyDarkBlue btn-sm {{ btn_name }}" href="{{ btn_href }}"
-                                id="{{ btn_id_name }}_{{ result.id }}" data-token="{{ csrf_token('tok'~result.id) }}">
-                                {{ btn_message }}
-                            </a>
-                        </div>
                         {# End of management of buttons #}
                     </div>
                     {% if not loop.last %}<hr>{% endif %}
@@ -140,17 +107,27 @@
     </div>
 {% endif %}
 
-{% macro button_accept(id_user) %}
-    <div class="col-5 col-md-4 text-right my-auto">
-        <a class="btn btn-outline-happyDarkBlue btn-sm btn-accept" id="A_{{ id_user }}" href="#">{{ 'generic.accept'|trans|raw }}</a>
-        <div class="btn-group">
-            <button class="btn btn-happyGrey btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-user-minus"></i>
-            </button>
-            <div class="dropdown-menu dropdown-menu-right">
-                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Refuser la relation</button>
-                <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Blackliter {{ result.pseudo }}</button>
-            </div>
-        </div>
+
+{% macro badge(id_user, badge_display, badge_message) %}
+    <span class="badge badge-happyDarkBlue" id="B_{{ id_user }}" style="display:{{ badge_display }} ">{{ badge_message }}</span>
+{% endmacro %}
+
+{% macro btn_action(id_user, btn_display, btn_id, btn_url, btn_message) %}
+    <div class="col-5 col-md-4 text-right my-auto" style="display: {{ btn_display }};">
+        <a class="btn btn-outline-happyDarkBlue btn-sm btn-action" id="{{ btn_id }}_{{ id_user }}" href="{{ btn_url }}"
+            data-token="{{ csrf_token('tok'~id_user) }}">{{ btn_message }}
+        </a>
     </div>
+{% endmacro %}
+
+{% macro btn_group(btn_group_display) %}
+    {# <div class="btn-group" style:"display:{{ btn_group_dispplay }}">
+        <button class="btn btn-happyGrey btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user-minus"></i>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Refuser la relation</button>
+            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Blackliter {{ result.pseudo }}</button>
+        </div>
+    </div> #}
 {% endmacro %}
