--- a/templates/partials/_listProfile.html.twig
+++ b/templates/partials/_listProfile.html.twig
@@ -64,34 +64,33 @@
                             </div>
                         </div>
                         {# Management of button #}
-                        {% if list == 'F' %} {# if show friends #}
-                            {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
-                            {# <div class="btn-group">
-                                <button class="btn btn-happyDarkBlue btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-user-minus"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Supprimer la relation</button>
-                                </div>
-                            </div> #}
-                        {% elseif result.id != user_id %}
-                            {% if flag_requested %} {# if user has requested for a connection #}
-                                {{ _self.btn_action(result.id, 'inline', 'CA', '#', 'generic.cancel'|trans|raw) }}
-                            {% elseif flag_requester %} {# if user has been requested for a connection #}
-                                {{ _self.btn_action(result.id, 'inline', 'AC', '#', 'generic.accept'|trans|raw) }}
-                            {% else %}
-                                {% for friend_or_blacklist  in friends_blackList %}
-                                    {% if friend_or_blacklist.u_id == result.id and friend_or_blacklist.c_state == 'C' %} {# if already friend #}
-                                        {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
-                                        {% set flag_connected = true %}
-                                    {% endif %}
-                                {% endfor %}
+                        <div class="col-5 col-md-4 text-right my-auto">
+                            {% if list == 'F' %} {# if show friends #}
+                                {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
+                                {{ _self.btn_group(result.id, 'inline', result.pseudo) }}
+                            {% elseif result.id != user_id %}
+                                {% if flag_requested %} {# if user has requested for a connection #}
+                                    {{ _self.btn_action(result.id, 'inline', 'CA', path('request_action', {'id': result.id}), 'generic.cancel'|trans|raw) }}
+                                    {{ _self.btn_group(result.id, 'none', result.pseudo) }}
+                                {% elseif flag_requester %} {# if user has been requested for a connection #}
+                                    {{ _self.btn_action(result.id, 'inline', 'AC', path('request_action', {'id': result.id}), 'generic.accept'|trans|raw) }}
+                                    {{ _self.btn_group(result.id, 'inline', result.pseudo) }}
+                                {% else %}
+                                    {% for friend_or_blacklist  in friends_blackList %}
+                                        {% if friend_or_blacklist.u_id == result.id and friend_or_blacklist.c_state == 'C' %} {# if already friend #}
+                                            {{ _self.btn_action(result.id, 'inline', 'ME', '#', 'generic.message'|trans|raw) }}
+                                            {{ _self.btn_group(result.id, 'inline', result.pseudo) }}
+                                            {% set flag_connected = true %}
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                                {# if no request and no relationship #}
+                                {% if not flag_requested and not flag_requester and not flag_connected %}
+                                    {{ _self.btn_action(result.id, 'inline', 'CO', path('request_action', {'id': result.id}), 'generic.connect'|trans|raw) }}
+                                    {{ _self.btn_group(result.id, 'none', result.pseudo) }}
+                                {% endif %}
                             {% endif %}
-                            {# if no request and no relationship #}
-                            {% if not flag_requested and not flag_requester and not flag_connected %}
-                                {{ _self.btn_action(result.id, 'inline', 'CO', path('request_connect', {'id': result.id}), 'generic.connect'|trans|raw) }}
-                            {% endif %}
-                        {% endif %}
+                        </div>
                         {# End of management of buttons #}
                     </div>
                     {% if not loop.last %}<hr>{% endif %}
@@ -113,21 +112,19 @@
 {% endmacro %}
 
 {% macro btn_action(id_user, btn_display, btn_id, btn_url, btn_message) %}
-    <div class="col-5 col-md-4 text-right my-auto" style="display: {{ btn_display }};">
-        <a class="btn btn-outline-happyDarkBlue btn-sm btn-action" id="{{ btn_id }}_{{ id_user }}" href="{{ btn_url }}"
-            data-token="{{ csrf_token('tok'~id_user) }}">{{ btn_message }}
-        </a>
-    </div>
+    <a class="btn btn-outline-happyDarkBlue btn-sm btn-action" id="{{ btn_id }}_{{ id_user }}" href="{{ btn_url }}"
+        style="display: {{ btn_display }};" data-token="{{ csrf_token('tok'~id_user) }}">{{ btn_message }}
+    </a>
 {% endmacro %}
 
-{% macro btn_group(btn_group_display) %}
-    {# <div class="btn-group" style:"display:{{ btn_group_dispplay }}">
+{% macro btn_group(btn_grp_id, btn_grp_display, btn_grp_pseudo) %}
+    <div class="btn-group ml-1" id="BG_{{ btn_grp_id }}" style="display:{{ btn_grp_display }}">
         <button class="btn btn-happyGrey btn-sm dropdown-toggle dropdown-del-user" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user-minus"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right">
-            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Refuser la relation</button>
-            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Blackliter {{ result.pseudo }}</button>
+            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Supprimer la relation</button>
+            <button class="dropdown-item" type="button" style="font-size: 0.8rem;">Bloquer {{ btn_grp_pseudo }}</button>
         </div>
-    </div> #}
+    </div>
 {% endmacro %}
