--- a/templates/partials/js/_listProfileJs.html.twig
+++ b/templates/partials/js/_listProfileJs.html.twig
@@ -10,15 +10,13 @@
     }
   })
 
-  // manage connect button
+  // handle connect button
   document.querySelectorAll('.btn-action').forEach(action => 
     action.addEventListener('click', (e) => { 
       e.preventDefault()
       var clickAction = action.getAttribute('id').substring(0,2)
       var badgeId = 'B_' + action.getAttribute('id').substring(action.getAttribute('id').indexOf('_', 1) + 1, action.getAttribute('id').length)
-      console.log(clickAction)
-      console.log(badgeId)
-      // manage action on click
+      // handle action on click
       switch (clickAction) {
         case 'CO':  // click on connect button
           sendJsonRequest(action.getAttribute('href'), action.dataset.token, 'CO')
@@ -75,7 +73,45 @@
         default:
           break
       }
-      
+    })
+  )
+
+  // handle dropdown-item 
+  document.querySelectorAll('.dropdown-item-action').forEach(item => 
+    item.addEventListener('click', (e) => { 
+      e.preventDefault()
+      var clickItem = item.getAttribute('id').substring(0,2)
+      var userId = item.getAttribute('id').substring(item.getAttribute('id').indexOf('_', 1) + 1, item.getAttribute('id').length)
+      var btnGrpId = 'BG_' + userId
+      console.log(clickItem + ' ' + item.innerHTML)
+      console.log(btnGrpId + ' ' + userId)
+      switch (clickItem) {
+        case 'BL':  // Block user
+          sendJsonRequest(item.getAttribute('href'), item.dataset.token, 'BL')
+          .then(response => {
+            if (response.success) {
+
+              console.log("et oh j'y suis")
+
+              // change type and string of action for button
+              // var btnId = 'ME_' + 
+              var newId = item.getAttribute('id').replace('BL', 'UN')
+              item.setAttribute('id', newId)
+              item.innerHTML = "{{ 'generic.unlock'|trans|raw }}"
+              // hide action item
+              if (document.getElementById('BG_' + userId).style.display == 'inline') {
+                document.getElementById('BG_' + userId).style.display = 'none'
+              }
+            }
+            else {
+              console.log('foireux')
+            }
+          })
+          .catch(e => alert(e))
+          break
+        default:
+          break
+      }
     })
   )
 
